docs: updated story status

--- a/docs/stories/4.1.confidence-scoring.md
+++ b/docs/stories/4.1.confidence-scoring.md
@@ -2,7 +2,10 @@
 
 ## Status
 
-Draft
+Implemented ✅
+
+**Completion Date:** Pre-existing (before Epic 6 story creation)
+**Implementation:** `/lib/algorithms/confidence-scoring.ts`
 
 ## Story
 
@@ -164,19 +167,36 @@ No previous stories in Epic 4. This is the foundational algorithm for the Adapti
 
 ### Agent Model Used
 
-_To be populated by dev agent_
+claude-sonnet-4-5 (status verification on 2025-10-20)
 
 ### Debug Log References
 
-_To be populated by dev agent_
+N/A - Pre-existing implementation
 
 ### Completion Notes List
 
-_To be populated by dev agent_
+**Implementation Status:**
+- ✅ Fully implemented with weighted average algorithm
+- ✅ Exponential decay for recency bias (0.7 decay factor)
+- ✅ Performance scoring includes: correctness, attempts, hints, time
+- ✅ Thresholds defined: <60% needs work, 60-80% progressing, >80% mastered
+- ✅ Edge cases handled (no history, perfect scores)
+- ✅ Used in SessionSummary and Dashboard components
+- ❌ Unit tests not implemented
+
+**Integration Points:**
+- `components/game/SessionSummary.tsx` - Displays confidence scores
+- `app/dashboard/page.tsx` - Shows word mastery overview
+- `lib/game/useGameSession.ts` - Tracks performance data
 
 ### File List
 
-_To be populated by dev agent_
+**Primary Implementation:**
+- `/lib/algorithms/confidence-scoring.ts` (180 lines)
+
+**Usage Locations:**
+- `/components/game/SessionSummary.tsx`
+- `/app/dashboard/page.tsx`
 
 ## QA Results
 
