--- a/docs/stories/5.1.letter-hunt-game.md
+++ b/docs/stories/5.1.letter-hunt-game.md
@@ -2,7 +2,12 @@
 
 ## Status
 
-Draft
+Implemented ✅
+
+**Completion Date:** Pre-existing
+**Component:** `/components/games/LetterHunt.tsx`
+**Metadata:** `/lib/games/letter-hunt.ts`
+**Registration:** Registered in `/lib/games/index.ts`
 
 ## Story
 
