--- a/docs/stories/5.3.picture-reveal-game.md
+++ b/docs/stories/5.3.picture-reveal-game.md
@@ -2,7 +2,11 @@
 
 ## Status
 
-Draft
+Implemented ✅
+
+**Completion Date:** Pre-existing
+**Component:** `/components/games/PictureReveal.tsx`
+**Metadata:** `/lib/games/picture-reveal.ts`
 
 ## Story
 
