--- a/docs/stories/5.4.word-building-blocks-game.md
+++ b/docs/stories/5.4.word-building-blocks-game.md
@@ -2,7 +2,11 @@
 
 ## Status
 
-Draft
+Implemented ✅
+
+**Completion Date:** Pre-existing
+**Component:** `/components/games/WordBuildingBlocks.tsx`
+**Metadata:** `/lib/games/word-building.ts`
 
 ## Story
 
