--- a/docs/stories/5.5.register-new-games.md
+++ b/docs/stories/5.5.register-new-games.md
@@ -2,7 +2,11 @@
 
 ## Status
 
-Draft
+Implemented ✅
+
+**Completion Date:** Pre-existing
+**Implementation:** `/lib/games/index.ts` - All 8 games registered
+**Note:** letter-hunt, trace-write, picture-reveal, and word-building are fully registered and integrated with adaptive engine
 
 ## Story
 
