--- a/docs/stories/5.2.trace-write-game.md
+++ b/docs/stories/5.2.trace-write-game.md
@@ -2,7 +2,11 @@
 
 ## Status
 
-Draft
+Implemented ✅
+
+**Completion Date:** Pre-existing
+**Component:** `/components/games/TraceAndWrite.tsx`
+**Metadata:** `/lib/games/trace-write.ts`
 
 ## Story
 
