docs: updating story 6.2 to resolve inconsistencies

--- a/docs/stories/6.2.story-progress-machine.md
+++ b/docs/stories/6.2.story-progress-machine.md
@@ -2,7 +2,7 @@
 
 ## Status
 
-Draft
+Approved
 
 ## Story
 
@@ -12,23 +12,23 @@ Draft
 
 ## Acceptance Criteria
 
-1. `StoryProgressMachine` is created in `/machines/story-progress/storyProgressMachine.ts`
+1. `StoryProgressMachine` is created in `lib/story/machines/storyProgressMachine.ts`
 2. Machine has states representing story checkpoints: `intro`, `checkpoint1`, `checkpoint2`, `checkpoint3`, `finale`
 3. Machine manages context: current checkpoint, games completed, story milestones unlocked
 4. Machine handles events: `GAME_COMPLETED`, `CHECKPOINT_REACHED`, `STORY_RESET`
 5. Progression logic: advance checkpoint every N games completed (e.g., every 5-7 games)
-6. Machine persists state to IndexedDB so story resumes across sessions
+6. Machine persists state to localStorage so story resumes across sessions
 7. Machine is visualizable in XState Inspector
 8. Unit tests verify checkpoint progression logic
 
 ## Tasks / Subtasks
 
 - [ ] Create StoryProgressMachine file structure (AC: 1)
-  - [ ] Create directory `/machines/story-progress/`
-  - [ ] Create file `storyProgressMachine.ts`
-  - [ ] Create `types.ts` for machine-specific types
-  - [ ] Create `storyProgressMachine.test.ts` for tests
-  - [ ] Create `index.ts` for exports
+  - [ ] Create directory `lib/story/machines/` (if not exists)
+  - [ ] Create file `lib/story/machines/storyProgressMachine.ts`
+  - [ ] Add types to `types/story.ts` (follow coding standards)
+  - [ ] Create `lib/story/machines/storyProgressMachine.test.ts` for tests
+  - [ ] Create `lib/story/machines/index.ts` for exports
 
 - [ ] Define machine states and transitions (AC: 2)
   - [ ] Define states:
@@ -162,10 +162,11 @@ Draft
   - [ ] `incrementGamesCompleted`: Increment context counter
   - [ ] `unlockCheckpoint1/2/3`: Add checkpoint to unlocked array, update currentCheckpoint
 
-- [ ] Implement IndexedDB persistence (AC: 6)
-  - [ ] Create `/lib/storage/story-progress-storage.ts`
-  - [ ] Implement `saveStoryProgress(context)`
-  - [ ] Implement `loadStoryProgress(): Promise<StoryProgressContext | null>`
+- [ ] Implement localStorage persistence (AC: 6)
+  - [ ] Use existing `lib/storage/story-progress-storage.ts` or create if missing
+  - [ ] Implement `saveStoryProgress(context)` using localStorage
+  - [ ] Implement `loadStoryProgress(): StoryProgressContext | null` (synchronous)
+  - [ ] Follow storage abstraction pattern from `lib/storage/localStorage.ts`
   - [ ] Auto-save context on state transitions
   - [ ] Load persisted state on machine initialization
 
@@ -176,7 +177,7 @@ Draft
   - [ ] Verify context updates appear correctly
 
 - [ ] Create React hook for machine
-  - [ ] Create `/hooks/useStoryProgress.ts`:
+  - [ ] Create `lib/story/useStoryProgress.ts`:
     ```typescript
     export function useStoryProgress() {
       const [state, send] = useMachine(storyProgressMachine)
@@ -196,26 +197,39 @@ Draft
     ```
 
 - [ ] Create comprehensive unit tests (AC: 8)
-  - [ ] Create test file `storyProgressMachine.test.ts`
+  - [ ] Create test file `lib/story/machines/storyProgressMachine.test.ts`
   - [ ] Test: Machine initializes in `intro` state
   - [ ] Test: Transitions to `playing` on CONTINUE_STORY
   - [ ] Test: Reaches checkpoint1 after 5 games
   - [ ] Test: Reaches checkpoint2 after 10 games
   - [ ] Test: Reaches checkpoint3 after 15 games
   - [ ] Test: Doesn't skip checkpoints
-  - [ ] Test: Persists to IndexedDB correctly
-  - [ ] Test: Loads from IndexedDB correctly
-  - [ ] Run tests with `npm run test`
+  - [ ] Test: Persists to localStorage correctly
+  - [ ] Test: Loads from localStorage correctly
+  - [ ] Run tests with `pnpm test`
 
 ## Dev Notes
 
 ### Architecture Context
 
-[Source: docs/ui-architecture.md#StoryProgressMachine]
+**XState Version:** 5.x (confirmed in tech stack)
+
+**Project Structure:**
+```
+lib/
+├── story/
+│   ├── assets.ts           # Existing (Story 6.1)
+│   ├── content.ts          # Existing (Story 6.1)
+│   ├── machines/           # NEW - Create this directory
+│   │   ├── storyProgressMachine.ts    # NEW - Main machine
+│   │   ├── storyProgressMachine.test.ts  # NEW - Tests
+│   │   └── index.ts        # NEW - Exports
+│   └── useStoryProgress.ts # NEW - React hook
+```
 
 **Machine Pattern:**
 ```typescript
-// machines/story-progress/storyProgressMachine.ts
+// lib/story/machines/storyProgressMachine.ts
 import { createMachine, assign } from 'xstate'
 
 export const storyProgressMachine = createMachine({
@@ -283,9 +297,43 @@ export const gameSessionMachine = createMachine({
 })
 ```
 
-**Persistence Pattern:**
+**Persistence Pattern (localStorage):**
 ```typescript
-// Auto-save on context changes
+// lib/storage/story-progress-storage.ts
+import type { StoryProgressContext } from '@/types/story'
+
+const STORAGE_KEY = 'wordcraft_story_progress'
+
+export function saveStoryProgress(context: StoryProgressContext): void {
+  if (typeof window === 'undefined') return // SSR safety
+
+  try {
+    localStorage.setItem(STORAGE_KEY, JSON.stringify(context))
+  } catch (error) {
+    console.error('Error saving story progress:', error)
+  }
+}
+
+export function loadStoryProgress(): StoryProgressContext | null {
+  if (typeof window === 'undefined') return null
+
+  try {
+    const stored = localStorage.getItem(STORAGE_KEY)
+    if (!stored) return null
+
+    const context = JSON.parse(stored)
+    // Convert date strings back to Date objects
+    return {
+      ...context,
+      sessionStartTime: new Date(context.sessionStartTime)
+    }
+  } catch (error) {
+    console.error('Error loading story progress:', error)
+    return null
+  }
+}
+
+// Auto-save on state transitions
 export const storyProgressMachine = createMachine({
   // ... config
   on: {
@@ -298,28 +346,81 @@ export const storyProgressMachine = createMachine({
 })
 ```
 
+**Confidence Scoring Integration:**
+```typescript
+// For shouldReachFinale guard
+import { getMasteredWords, calculateWordConfidence } from '@/lib/algorithms/confidence-scoring'
+import { getAllGameResults } from '@/lib/storage/sessionStorage'
+
+// In guard implementation:
+guard: ({ context }) => {
+  const results = getAllGameResults()
+  const allWords = /* get from word list */
+  const confidenceMap = new Map(
+    allWords.map(word => [
+      word,
+      calculateWordConfidence(word, results)
+    ])
+  )
+  const masteredWords = getMasteredWords(confidenceMap)
+  return masteredWords.length === allWords.length
+}
+```
+
 ### Dependencies
 
 **Required:**
 - Story 6.1 (Story Theme Assets) - Provides theme information
-- XState v5 - State machine library
-- IndexedDB - For persistence
+- XState v5 - State machine library (confirmed in tech stack)
+- localStorage - For persistence (existing storage pattern)
+- Confidence scoring algorithms - `lib/algorithms/confidence-scoring.ts` (already exists)
+
+**Integration Points:**
+- `lib/algorithms/confidence-scoring.ts` - For finale guard (getMasteredWords)
+- `lib/storage/sessionStorage.ts` - For accessing game results (getAllGameResults)
+- `types/story.ts` - Add StoryProgressContext and StoryProgressEvent types
 
 **Enables:**
 - Story 6.4 (Integrate Checkpoints) - Will use this machine
 - Story 6.5 (Intro/Finale Screens) - Will query machine state
 
+**Note on GameSessionMachine:**
+The Dev Notes show integration with `GameSessionMachine`, but this doesn't currently exist in the codebase. This is a future integration point and should not block this story.
+
 ### Testing
 
-[Source: docs/ui-architecture.md#XState Machine Testing]
+**Testing Standards from Architecture:**
+
+**Framework:** Vitest (confirmed in tech stack)
+
+**Test File Location:** `lib/story/machines/storyProgressMachine.test.ts`
+
+**Testing Patterns:**
+- XState machine testing with `createActor` from `xstate`
+- Import test utilities from `vitest`: `describe`, `it`, `expect`
+- Test all state transitions, guards, and actions
+- Test persistence to localStorage
+- Mock localStorage for SSR-safe testing
+
+**Coverage Requirements:**
+- All state transitions must be tested
+- All guards must be tested
+- All actions must be tested
+- localStorage integration must be tested
 
 **Test Scenarios:**
 ```typescript
-import { describe, it, expect } from 'vitest'
+import { describe, it, expect, beforeEach } from 'vitest'
 import { createActor } from 'xstate'
 import { storyProgressMachine } from './storyProgressMachine'
+import { loadStoryProgress, saveStoryProgress } from '@/lib/storage/story-progress-storage'
 
 describe('StoryProgressMachine', () => {
+  beforeEach(() => {
+    // Clear localStorage before each test
+    localStorage.clear()
+  })
+
   it('starts in intro state', () => {
     const actor = createActor(storyProgressMachine)
     actor.start()
@@ -343,30 +444,49 @@ describe('StoryProgressMachine', () => {
     expect(actor.getSnapshot().context.currentCheckpoint).toBe(1)
   })
 
-  it('persists state to IndexedDB', async () => {
+  it('persists state to localStorage', () => {
     const actor = createActor(storyProgressMachine)
     actor.start()
 
     actor.send({ type: 'CONTINUE_STORY' })
     actor.send({ type: 'GAME_COMPLETED' })
 
-    await waitFor(() => {
-      const saved = await loadStoryProgress()
-      expect(saved?.gamesCompleted).toBe(1)
-    })
+    // Check localStorage was updated (synchronous)
+    const saved = loadStoryProgress()
+    expect(saved?.gamesCompleted).toBe(1)
+  })
+
+  it('loads persisted state on initialization', () => {
+    // Save state to localStorage
+    const context = {
+      currentCheckpoint: 1,
+      gamesCompleted: 5,
+      totalGamesInSession: 20,
+      checkpointsUnlocked: [0, 1],
+      lastCheckpointAt: 5,
+      storyTheme: 'space',
+      sessionStartTime: new Date()
+    }
+    saveStoryProgress(context)
+
+    // Create new machine instance (should load persisted state)
+    const loaded = loadStoryProgress()
+    expect(loaded?.gamesCompleted).toBe(5)
+    expect(loaded?.currentCheckpoint).toBe(1)
   })
 })
 ```
 
 **Run Tests:**
 ```bash
-npm run test
+pnpm test
 ```
 
 ## Change Log
 
 | Date | Version | Description | Author |
 |------|---------|-------------|--------|
+| 2025-10-20 | 1.1 | Fixed storage technology (IndexedDB→localStorage), corrected file paths to match architecture, added Testing section, changed npm to pnpm | Sarah (PO) |
 | 2025-10-20 | 1.0 | Initial story created | Sarah (PO) |
 
 ## Dev Agent Record
