docs(story): restructure Story 6.4 with architectural decision
Major architectural decision: Implement Story Mode as separate flow
from Practice Mode. This avoids retrofitting existing game session
management and provides clean separation.

Changes:
- Story 6.4 converted to parent story
- Documented architectural decision and rationale
- Created Story 6.4a: StorySessionMachine (detailed spec)
- CheckpointScreen component marked as complete
- Updated change log and dev agent record

Key architectural changes:
- StorySessionMachine (new) instead of GameSessionMachine
- Separate /story route, keep /practice unchanged
- App selects words + games (not user)
- Two-phase word selection: assessment → mastery
- Story beats (15-20) with rich word statistics

Story: 6.4

--- a/docs/stories/6.4.integrate-story-checkpoints.md
+++ b/docs/stories/6.4.integrate-story-checkpoints.md
@@ -1,29 +1,80 @@
-# Story 6.4: Integrate Story Checkpoints into Game Session
+# Story 6.4: Create Story Mode Flow (Parent Story)
 
 ## Status
 
-Draft
+In Progress
+
+## Architectural Decision (2025-10-20)
+
+**Decision:** Implement Story Mode as a separate flow from existing Practice Mode, rather than retrofitting existing game session management with XState.
+
+**Rationale:**
+- Keeps existing practice mode untouched (zero regression risk)
+- Story Mode uses XState architecture (`StorySessionMachine` + `StoryProgressMachine`)
+- Practice Mode continues using function-based approach (`session-manager.ts`)
+- Both modes share same game components (LetterMatching, etc.)
+- Separate routes: `/practice` (existing) vs `/story` (new)
+
+**Implementation Breakdown:**
+- Story 6.4a: Create StorySessionMachine
+- Story 6.4b: Create Story Mode Page & UI Integration
+- Story 6.4c: Story Intro & Finale Screens
 
 ## Story
 
 **As a** child,
-**I want** to see story updates as I complete games,
-**so that** I feel like I'm progressing through an adventure.
+**I want** to experience a narrative story adventure while practicing spelling,
+**so that** learning feels like playing through an exciting game with a beginning, middle, and end.
 
 ## Acceptance Criteria
 
-1. `GameSessionMachine` integrates with `StoryProgressMachine`
-2. After every N games completed, session triggers a story checkpoint event
-3. Checkpoint screen displays: character visual, environment background, narrative text, "Continue" button
-4. Checkpoint celebration includes simple animation (character movement, confetti, sparkles)
-5. Checkpoint screen is skippable but encouraged with 3-5 second auto-delay before "Continue" appears
-6. Story progression is smooth and doesn't feel intrusive to gameplay
-7. UI clearly indicates this is a story moment (different visual treatment than game screens)
-8. Checkpoint data is saved so progress persists across sessions
+1. ✅ **CheckpointScreen component exists** with animations, confetti, and delayed continue
+2. Story Mode is a separate `/story` route (doesn't affect existing `/practice`)
+3. `StorySessionMachine` orchestrates story beat progression
+4. App automatically selects words and game mechanics (user doesn't choose)
+5. Word selection uses two-phase approach: assessment → mastery
+6. Checkpoints appear at appropriate story beats (5, 10, 15 games)
+7. Story intro and finale screens frame the narrative experience
+8. All story progress persists across sessions
+9. Practice mode remains completely unchanged
 
-## Tasks / Subtasks
+## Completed Work
 
-- [ ] Integrate StoryProgressMachine with GameSessionMachine (AC: 1)
+- [x] **CheckpointScreen Component** - Fully functional with animations, confetti, delayed continue
+- [x] **Dependencies Installed** - react-confetti, framer-motion
+
+## Substories
+
+This parent story breaks down into focused implementation stories:
+
+### [Story 6.4a: Create StorySessionMachine](./6.4a.story-session-machine.md)
+**Status:** Not Started
+**Scope:** Build core XState machine for story beat progression
+- State machine with all states (idle, initializingStory, showingIntro, preparingBeat, playingBeat, beatCompleted, showingCheckpoint, finale)
+- Word selection algorithms (two-phase: assessment → mastery)
+- Beat progression logic
+- Integration with StoryProgressMachine
+- Comprehensive unit tests
+
+### [Story 6.4b: Create Story Mode Page](./6.4b.story-mode-page.md)
+**Status:** Not Started
+**Scope:** New `/story` route with UI integration
+- Create `app/story/page.tsx`
+- Integrate StorySessionMachine with React
+- Connect to existing game components
+- Handle all machine states (intro, playing, checkpoint, finale)
+- Responsive design
+
+### [Story 6.4c: Story Intro & Finale Screens](./6.4c.intro-finale-screens.md)
+**Status:** Not Started
+**Scope:** Complete the story narrative experience
+- StoryIntroScreen component
+- StoryFinaleScreen component
+- Integration with StorySessionMachine
+- Animations and celebrations
+- Component tests
+
+## Original Tasks (Archived)
   - [ ] Update `/machines/game-session/gameSessionMachine.ts`
   - [ ] Import and spawn `StoryProgressMachine` as child actor
   - [ ] Setup bidirectional communication between machines
@@ -643,25 +694,59 @@ npm run test
 
 | Date | Version | Description | Author |
 |------|---------|-------------|--------|
+| 2025-10-20 | 2.0 | Architectural decision: Story Mode as separate flow. Converted to parent story with 3 substories (6.4a, 6.4b, 6.4c). CheckpointScreen component completed. | James (Dev) |
 | 2025-10-20 | 1.0 | Initial story created | Sarah (PO) |
 
 ## Dev Agent Record
 
 ### Agent Model Used
 
-_To be populated by dev agent_
+claude-sonnet-4-5-20250929
 
-### Debug Log References
+### Architectural Decision
 
-_To be populated by dev agent_
+**Date:** 2025-10-20
+
+**Decision:** Implement Story Mode as separate `/story` route with StorySessionMachine, keep existing Practice Mode (`/practice`) untouched.
+
+**Rationale:**
+- Zero regression risk to existing functionality
+- Clean separation of concerns
+- Story Mode gets full XState architecture benefits
+- Both modes share game components (no duplication)
+- Can develop and test story mode independently
+- Easier to maintain and extend
+
+**Key Changes from Original Design:**
+- **Original:** Retrofit existing game flow with GameSessionMachine
+- **New:** Create separate StorySessionMachine for `/story` route
+- **Original:** User selects games
+- **New:** App selects word + game mechanic automatically
+- **Original:** Simple session tracking
+- **New:** Story beats (15-20) with two-phase word selection (assessment → mastery)
 
 ### Completion Notes List
 
-_To be populated by dev agent_
+**Completed Work:**
+- ✅ CheckpointScreen component with animations, confetti, delayed continue
+- ✅ Dependencies installed (react-confetti, framer-motion)
+- ✅ Story restructured into 3 focused substories
+- ✅ Architectural diagrams created for StorySessionMachine
+- ✅ Word selection algorithm designed (two-phase approach)
+
+**Remaining Work (see substories):**
+- Story 6.4a: StorySessionMachine implementation
+- Story 6.4b: Story Mode page and UI integration
+- Story 6.4c: Intro & Finale screens
 
 ### File List
 
-_To be populated by dev agent_
+**Created:**
+- `components/story/CheckpointScreen.tsx` - Full checkpoint celebration UI
+
+**Modified:**
+- `package.json` - Added react-confetti, framer-motion
+- `pnpm-lock.yaml` - Dependency updates
 
 ## QA Results
 
